syntax = "proto3";

option go_package = "pkg/proto";

package checkin;

message Message {
  string id = 1;
  string text = 2;
}

message MessageList {
  string context_message = 1;
  repeated Message messages = 2;
}

message Family {
  string familyId = 1;
  repeated Member members = 2;
}

message Member {
  string firstName = 1; 
  string lastName = 2;
  string schoolID = 4;
  string schoolName = 5;
  string additionalNote = 6;
}

message Event {
  string eventId = 1;
  string eventName = 2;
  string description = 3;
  string time = 4;
}

message updateMemberRequest {
  int32 memberID = 1;
  int32 familyID = 2;
  string firstName = 3;
  string lastName = 4;
  string schoolID = 5;
  string schoolName = 6;
}

message checkInRequest {
  repeated int32 memberIDs = 1;
  string eventID = 2;
}